[package]
name = "mud_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
argon2 = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
rand = "0.9.2"
rand_distr = "0.5.1"
axum = { version = "0.8.7", features = ["ws"] }
tower-http = "0.6.8"
tokio-tungstenite = "0.28.0"
